change font and bg , add layout preview page, add actions.ts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-	"cSpell.words": ["Configurator", "tanstack", "uploadthing", "utfs"]
+	"cSpell.words": [
+		"Configurator",
+		"dics",
+		"recurcive",
+		"tailwindcss",
+		"tanstack",
+		"uploadthing",
+		"utfs"
+	]
 }
