add rules and script

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
+		"prebuild": "npm run lint",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
+		"lint": "eslint .",
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
