add rules and script

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"prebuild": "npm run lint",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint .",
+		"lint": "next lint",
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
