--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"framer-motion": "^11.3.17",
 		"lucide-react": "^0.414.0",
 		"next": "14.2.5",
+		"phonecase": "file:",
 		"prisma": "^5.17.0",
 		"react": "^18",
 		"react-dom": "^18",
